--- a/static/css/main.quickfix.css
+++ b/static/css/main.quickfix.css
@@ -7,3 +7,18 @@
  * main.css.
  */
 
+ .delete-venue {
+    border: none;
+    outline: none;
+    color: red;
+    float: right;
+    cursor: pointer;
+    background-color: rgba(255,255,255, 0);
+    font-size: 20px;
+    align-self: flex-start;
+  }
+
+  ul.items > li {
+    display: flex;
+    justify-content: space-between;
+  }
