--- a/templates/pages/shows.html
+++ b/templates/pages/shows.html
@@ -2,6 +2,7 @@
 {% block title %}Fyyur | Shows{% endblock %}
 {% block content %}
 <div class="row shows">
+    <h3>Upcoming Shows: {{ shows|length }}</h3>
     {%for show in shows %}
     <div class="col-sm-4">
         <div class="tile tile-show">
@@ -12,6 +13,20 @@
             <h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
         </div>
     </div>
+    {% endfor %}
+</div>
+<div class="row shows">
+    <h3>Past Shows:</h3>
+    {% for show in past_shows %}
+        <div class="col-sm-4">
+            <div class="tile tile-show">
+                <img src="{{ show.artist_image_link }}" alt="Artist Image" />
+                <h4>{{ show.start_time|datetime('full') }}</h4>
+                <h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
+                <p>playing at</p>
+                <h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
+            </div>
+        </div>
     {% endfor %}
 </div>
 {% endblock %}
