--- a/templates/pages/search_venues.html
+++ b/templates/pages/search_venues.html
@@ -9,6 +9,7 @@
 			<i class="fas fa-music"></i>
 			<div class="item">
 				<h5>{{ venue.name }}</h5>
+				<p><small style="color:dimgray">Upcoming shows: {{ venue.num_upcoming_shows}}</small></p>
 			</div>
 		</a>
 	</li>
