--- a/templates/pages/venues.html
+++ b/templates/pages/venues.html
@@ -10,6 +10,7 @@
 				<i class="fas fa-music"></i>
 				<div class="item">
 					<h5>{{ venue.name }}</h5>
+					<p><small style="color:dimgray">Upcoming shows: {{ venue.num_upcoming_shows}}</small></p>
 				</div>
 			</a>
             <button class="delete-venue" data-id="{{ venue.id }}">&cross;</button>
